--- a/annual_reports.html
+++ b/annual_reports.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
 
+        <link rel="stylesheet" href="home-page-addon/style.css">
     <!-- font-awomme cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -19,7 +20,7 @@
 </head>
 
 <body>
-    <section class="upper-header">
+    <!-- <section class="upper-header">
         <div class="top-header">
             <div class="header-left">
                 <a href="#">Raghunathpur </a>
@@ -31,7 +32,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!--=============== HEADER ===============-->
     <header class="header">
@@ -41,9 +42,9 @@
                     <img src="./assets/img/logo.png" alt="">
                     <div class="nav-block-name">
                         <div>
-                            Raghunathpur Block
+                            Kuchinda Block
                         </div>
-                        <div>Jagatsinghpur</div>
+                        <div>Sambalpur</div>
                     </div>
                 </a>
 
