--- a/annual_reports.html
+++ b/annual_reports.html
@@ -13,6 +13,7 @@
     <!-- font-awomme cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+    <link rel="stylesheet" href="home-page-addon/style.css">
 
     <!--=============== REMIXICONS ===============-->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
@@ -38,13 +39,13 @@
     <header class="header">
         <nav class="nav container">
             <div class="nav__data">
-                <a href="#" class="nav__logo">
+                <a href="index.html" class="nav__logo">
                     <img src="./assets/img/logo.png" alt="">
                     <div class="nav-block-name">
                         <div>
-                            Kuchinda Block
+                            Rayagada Block
                         </div>
-                        <div>Sambalpur</div>
+                        <div>Rayagada</div>
                     </div>
                 </a>
 
@@ -57,7 +58,7 @@
             <!--=============== NAV MENU ===============-->
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li><a href="./index.html" class="nav__link">Home</a></li>
+                    <li><a href="index.html" class="nav__link">Home</a></li>
                     <li class="dropdown__item">
                         <div class="nav__link">
                             About Block <i class="ri-arrow-down-s-line dropdown__arrow"></i>
@@ -65,18 +66,18 @@
 
                         <ul class="dropdown__menu">
                             <li>
-                                <a href="./history.html" class="dropdown__link">
+                                <a href="history.html" class="dropdown__link">
                                     History
                                 </a>
                             </li>
 
                             <li>
-                                <a href="./who's-who.html" class="dropdown__link">
+                                <a href="who's-who.html" class="dropdown__link">
                                     Who's Who
                                 </a>
                             </li>
                             <li>
-                                <a href="./map_of_block.html" class="dropdown__link">
+                                <a href="map_of_block.html" class="dropdown__link">
                                     Map Of Block
                                 </a>
                             </li>
@@ -89,47 +90,47 @@
 
                                 <ul class="dropdown__submenu">
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="block.html" class="dropdown__sublink">
                                             Block
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
-                                            Tahasil
+                                        <a href="gp.html" class="dropdown__sublink">
+                                            Gram Panchayat
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="police.html" class="dropdown__sublink">
                                             Police
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="revenue_villages.html" class="dropdown__sublink">
                                             Revenue Villages
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="court.html" class="dropdown__sublink">
                                             Court
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="constituencies.html" class="dropdown__sublink">
                                             Constituencies
                                         </a>
                                     </li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="demographic.html" class="dropdown__link">
                                     Demography
                                 </a>
                             </li>
                         </ul>
                     </li>
-                    <li class="dropdown__item">
+                    <!-- <li class="dropdown__item">
                         <div class="nav__link">
                             Departments <i class="ri-arrow-down-s-line dropdown__arrow"></i>
                         </div>
@@ -158,7 +159,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li class="dropdown__item">
                         <div class="nav__link">
                             Directory <i class="ri-arrow-down-s-line dropdown__arrow"></i>
@@ -166,23 +167,23 @@
 
                         <ul class="dropdown__menu">
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="government_contact.html" class="dropdown__link">
                                     Government Contact
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="press&media.html" class="dropdown__link">
                                     Press & Media
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="std&pin.html" class="dropdown__link">
                                     STD & PIN Codes
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="helpline.html" class="dropdown__link">
                                     Helpline
                                 </a>
                             </li>
@@ -195,34 +196,34 @@
 
                                 <ul class="dropdown__submenu">
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="bank.html" class="dropdown__sublink">
                                             Bank
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="college.html" class="dropdown__sublink">
                                             Colleges
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="school.html" class="dropdown__sublink">
                                             School
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="hospital.html" class="dropdown__sublink">
                                             Hospitals
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="ngo.html" class="dropdown__sublink">
                                             NGOs
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="electricity.html" class="dropdown__sublink">
                                             Electricity
                                         </a>
                                     </li>
@@ -238,29 +239,29 @@
 
                         <ul class="dropdown__menu">
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="block_env_plan.html" class="dropdown__link">
                                     Block Environment Plan
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="news.html" class="dropdown__link">
                                     News
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="rbsk_microplan.html" class="dropdown__link">
                                     RBSK Microplan
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="emergency_plan.html" class="dropdown__link">
                                     Emergency Plan
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="annual_reports.html" class="dropdown__link">
                                     Annul Reports
                                 </a>
                             </li>
@@ -268,47 +269,149 @@
                     </li>
                     <li class="dropdown__item">
                         <div class="nav__link">
+                            Local Businesses <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+                        </div>
+
+                        <ul class="dropdown__menu">
+                            <li>
+                                <a href="local-business.html" class="dropdown__link">
+                                    Local Businesses
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="business-registration.html" class="dropdown__link">
+                                    Businesses Registration
+                                </a>
+                            </li>
+
+                            
+                        </ul>
+                    </li>
+                    <!-- <li><a href="local-business.html" class="nav__link">Local Businesses</a></li> -->
+                    <li class="dropdown__item">
+                        <div class="nav__link">
                             More <i class="ri-arrow-down-s-line dropdown__arrow"></i>
                         </div>
 
                         <ul class="dropdown__menu">
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="notice.html" class="dropdown__link">
                                     Notice
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="tender.html" class="dropdown__link">
                                     Tenders
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="form.html" class="dropdown__link">
                                     Form
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="rti.html" class="dropdown__link">
                                     RTI
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="media_gallery.html" class="dropdown__link">
                                     Media Gallery
                                 </a>
                             </li>
+
                         </ul>
                     </li>
 
 
+                    <!-- <li><a href="#" class="nav__link">Demography</a></li> -->
 
+                    <!--=============== DROPDOWN 1 ===============-->
+                    <!-- <li class="dropdown__item">
+                        <div class="nav__link">
+                            Analytics <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+                        </div>
+
+                        <ul class="dropdown__menu">
+                            <li>
+                                <a href="#" class="dropdown__link">
+                                    <i class="ri-pie-chart-line"></i> Overview
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#" class="dropdown__link">
+                                    <i class="ri-arrow-up-down-line"></i> Transactions
+                                </a>
+                            </li>
+
+                            =============== DROPDOWN SUBMENU ===============
+                            <li class="dropdown__subitem">
+                                <div class="dropdown__link">
+                                    <i class="ri-bar-chart-line"></i> Reports <i class="ri-add-line dropdown__add"></i>
+                                </div>
+
+                                <ul class="dropdown__submenu">
+                                    <li>
+                                        <a href="#" class="dropdown__sublink">
+                                            <i class="ri-file-list-line"></i> Documents
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="#" class="dropdown__sublink">
+                                            <i class="ri-cash-line"></i> Payments
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="#" class="dropdown__sublink">
+                                            <i class="ri-refund-2-line"></i> Refunds
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li> -->
+
+                    <!-- <li><a href="#" class="nav__link">Products</a></li> -->
+
+                    <!--=============== DROPDOWN 2 ===============-->
+                    <!-- <li class="dropdown__item">
+                        <div class="nav__link">
+                            Users <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+                        </div>
+
+                        <ul class="dropdown__menu">
+                            <li>
+                                <a href="#" class="dropdown__link">
+                                    <i class="ri-user-line"></i> Profiles
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#" class="dropdown__link">
+                                    <i class="ri-lock-line"></i> Accounts
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#" class="dropdown__link">
+                                    <i class="ri-message-3-line"></i> Messages
+                                </a>
+                            </li>
+                        </ul>
+                    </li> -->
+
+                    <!-- <li><a href="#" class="nav__link">Contact</a></li> -->
                 </ul>
             </div>
             <div class="nav__data">
                 <a href="#" class="nav__logo">
-                    <img src="./assets/img/cm-1.png" alt="">
+                    <img class="cm-img" src="./assets/img/cm-1.png" alt="">
                 </a>
 
             </div>
