--- a/business-registration.html
+++ b/business-registration.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
 
+
     <link rel="stylesheet" href="home-page-addon/style.css">
     <!-- font-awomme cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -284,7 +285,7 @@
                                 </a>
                             </li>
 
-                            
+
                         </ul>
                     </li>
                     <!-- <li><a href="local-business.html" class="nav__link">Local Businesses</a></li> -->
@@ -418,7 +419,7 @@
         </nav>
     </header>
     <section class="about-sec-img">
-        <img src="./assets/img/about-section-img.png" alt="">
+        <img src="./assets/img/about-section-img-1.png" alt="">
     </section>
 
 
@@ -429,24 +430,12 @@
                     <div>
                         <nav>
                             <ul class="content-list">
-                                <li class="content-list-li"> <a href="">History</a> </li>
-                                <li class="content-list-li"><a href="">Who's Who</a> </li>
-                                <li class="content-list-li"><a href="">Map of Block</a> </li>
-                                <li class="content-list-li click-expand">Administrative Setup<i
-                                        class="ri-arrow-down-s-line dropdown__arrow"></i>
-                                    <ul>
-                                        <li class="content-list-li">Block</li>
-                                        <li class="content-list-li">Tahasil</li>
-                                        <li class="content-list-li">Police</li>
-                                        <li class="content-list-li">Police</li>
-                                        <li class="content-list-li">Revenue Villages</li>
-                                        <li class="content-list-li">Court</li>
-                                        <li class="content-list-li">Constituencies</li>
-                                    </ul>
-                                </li>
-                                <li class="content-list-li">
-                                    Demography
-                                </li>
+                                <li class="content-list-li"> <a href="">Moringa</a> </li>
+                                <li class="content-list-li"><a href="">Turmeric</a> </li>
+                                <li class="content-list-li"><a href="">leaf products</a> </li>
+                                <li class="content-list-li"><a href="">Hand Craft</a> </li>
+                                <li class="content-list-li"><a href="">terracotta products</a> </li>
+
                             </ul>
                         </nav>
                     </div>
@@ -458,30 +447,66 @@
                         <main>
                             <section class="main-sec">
                                 <div class="block-page-title-block">
-                                    <h1>History</h1>
+                                    <h1>Local Businesses Registration</h1><br>
+
                                 </div>
                                 <div>
                                     <div>
-                                        <table>
-                                            <thead>
-                                                <tr>
-                                                    <th>Sl. No</th>
-                                                    <th>G.P Name</th>
-                                                    <th>Name of the G.P.O</th>
-                                                    <th>Phone</th>
+                                        <div
+                                            style="max-width: 600px; margin: 20px auto; padding: 20px; background-color: white; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+                                            <h2 style="text-align: center; color: #333;">Business Registration Form</h2>
 
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td>1 </td>
-                                                    <td>Rayagada </td>
-                                                    <td>Biswajit Sahoo </td>
-                                                    <td>06724-220299 </td>
-                                                </tr>
-                                                
-                                            </tbody>
-                                        </table>
+                                            <form style="display: flex; flex-direction: column;">
+
+                                                <label style="margin-top: 10px; font-weight: bold;">Name</label>
+                                                <input type="text" name="name" placeholder="Full Name" required
+                                                    style="padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
+
+                                                <label style="margin-top: 10px; font-weight: bold;">Mobile
+                                                    Number</label>
+                                                <input type="tel" name="mobile" placeholder="10-digit Mobile Number"
+                                                    required
+                                                    style="padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
+
+                                                <label style="margin-top: 10px; font-weight: bold;">Email ID</label>
+                                                <input type="email" name="email" placeholder="Email Address" required
+                                                    style="padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
+
+                                                <label style="margin-top: 10px; font-weight: bold;">Address</label>
+                                                <textarea name="address" rows="3" placeholder="Business Address"
+                                                    required
+                                                    style="padding: 10px; border: 1px solid #ccc; border-radius: 5px;"></textarea>
+
+                                                <label style="margin-top: 10px; font-weight: bold;">Business
+                                                    Name</label>
+                                                <input type="text" name="businessName" placeholder="Enter Business Name"
+                                                    required
+                                                    style="padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
+
+                                                <label style="margin-top: 10px; font-weight: bold;">Product</label>
+                                                <input type="text" name="product" placeholder="Main Product or Service"
+                                                    required
+                                                    style="padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
+
+                                                <label style="margin-top: 10px; font-weight: bold;">Product
+                                                    Description</label>
+                                                <textarea name="productDescription" rows="4"
+                                                    placeholder="Brief Product Description" required
+                                                    style="padding: 10px; border: 1px solid #ccc; border-radius: 5px;"></textarea>
+
+                                                <label style="margin-top: 10px; font-weight: bold;">Production
+                                                    Capacity</label>
+                                                <input type="text" name="capacity" placeholder="e.g., 500 units/month"
+                                                    required
+                                                    style="padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
+
+                                                <button type="submit"
+                                                    style="margin-top: 20px; padding: 12px; background-color: #28a745; color: white; font-size: 16px; border: none; border-radius: 5px; cursor: pointer;">
+                                                    Register
+                                                </button>
+                                            </form>
+                                        </div>
+
                                     </div>
                                 </div>
                             </section>
