--- a/map_of_block.html
+++ b/map_of_block.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
 
+    <link rel="stylesheet" href="home-page-addon/style.css">
     <!-- font-awomme cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -19,7 +20,7 @@
 </head>
 
 <body>
-    <section class="upper-header">
+    <!-- <section class="upper-header">
         <div class="top-header">
             <div class="header-left">
                 <a href="#">Raghunathpur </a>
@@ -31,19 +32,19 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!--=============== HEADER ===============-->
     <header class="header">
         <nav class="nav container">
             <div class="nav__data">
-                <a href="#" class="nav__logo">
+                <a href="index.html" class="nav__logo">
                     <img src="./assets/img/logo.png" alt="">
                     <div class="nav-block-name">
                         <div>
-                            Raghunathpur Block
+                            Rayagada Block
                         </div>
-                        <div>Jagatsinghpur</div>
+                        <div>Rayagada</div>
                     </div>
                 </a>
 
@@ -56,7 +57,7 @@
             <!--=============== NAV MENU ===============-->
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li><a href="./index.html" class="nav__link">Home</a></li>
+                    <li><a href="index.html" class="nav__link">Home</a></li>
                     <li class="dropdown__item">
                         <div class="nav__link">
                             About Block <i class="ri-arrow-down-s-line dropdown__arrow"></i>
@@ -64,18 +65,18 @@
 
                         <ul class="dropdown__menu">
                             <li>
-                                <a href="./history.html" class="dropdown__link">
+                                <a href="history.html" class="dropdown__link">
                                     History
                                 </a>
                             </li>
 
                             <li>
-                                <a href="./who's-who.html" class="dropdown__link">
+                                <a href="who's-who.html" class="dropdown__link">
                                     Who's Who
                                 </a>
                             </li>
                             <li>
-                                <a href="./map_of_block.html" class="dropdown__link">
+                                <a href="map_of_block.html" class="dropdown__link">
                                     Map Of Block
                                 </a>
                             </li>
@@ -88,47 +89,47 @@
 
                                 <ul class="dropdown__submenu">
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="block.html" class="dropdown__sublink">
                                             Block
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
-                                            Tahasil
+                                        <a href="gp.html" class="dropdown__sublink">
+                                            Gram Panchayat
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="police.html" class="dropdown__sublink">
                                             Police
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="revenue_villages.html" class="dropdown__sublink">
                                             Revenue Villages
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="court.html" class="dropdown__sublink">
                                             Court
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="constituencies.html" class="dropdown__sublink">
                                             Constituencies
                                         </a>
                                     </li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="demographic.html" class="dropdown__link">
                                     Demography
                                 </a>
                             </li>
                         </ul>
                     </li>
-                    <li class="dropdown__item">
+                    <!-- <li class="dropdown__item">
                         <div class="nav__link">
                             Departments <i class="ri-arrow-down-s-line dropdown__arrow"></i>
                         </div>
@@ -157,7 +158,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li class="dropdown__item">
                         <div class="nav__link">
                             Directory <i class="ri-arrow-down-s-line dropdown__arrow"></i>
@@ -165,23 +166,23 @@
 
                         <ul class="dropdown__menu">
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="government_contact.html" class="dropdown__link">
                                     Government Contact
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="press&media.html" class="dropdown__link">
                                     Press & Media
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="std&pin.html" class="dropdown__link">
                                     STD & PIN Codes
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="helpline.html" class="dropdown__link">
                                     Helpline
                                 </a>
                             </li>
@@ -194,34 +195,34 @@
 
                                 <ul class="dropdown__submenu">
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="bank.html" class="dropdown__sublink">
                                             Bank
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="college.html" class="dropdown__sublink">
                                             Colleges
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="school.html" class="dropdown__sublink">
                                             School
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="hospital.html" class="dropdown__sublink">
                                             Hospitals
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="ngo.html" class="dropdown__sublink">
                                             NGOs
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="electricity.html" class="dropdown__sublink">
                                             Electricity
                                         </a>
                                     </li>
@@ -237,29 +238,29 @@
 
                         <ul class="dropdown__menu">
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="block_env_plan.html" class="dropdown__link">
                                     Block Environment Plan
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="news.html" class="dropdown__link">
                                     News
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="rbsk_microplan.html" class="dropdown__link">
                                     RBSK Microplan
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="emergency_plan.html" class="dropdown__link">
                                     Emergency Plan
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="annual_reports.html" class="dropdown__link">
                                     Annul Reports
                                 </a>
                             </li>
@@ -267,37 +268,60 @@
                     </li>
                     <li class="dropdown__item">
                         <div class="nav__link">
+                            Local Businesses <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+                        </div>
+
+                        <ul class="dropdown__menu">
+                            <li>
+                                <a href="local-business.html" class="dropdown__link">
+                                    Local Businesses
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="business-registration.html" class="dropdown__link">
+                                    Businesses Registration
+                                </a>
+                            </li>
+
+                            
+                        </ul>
+                    </li>
+                    <!-- <li><a href="local-business.html" class="nav__link">Local Businesses</a></li> -->
+                    <li class="dropdown__item">
+                        <div class="nav__link">
                             More <i class="ri-arrow-down-s-line dropdown__arrow"></i>
                         </div>
 
                         <ul class="dropdown__menu">
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="notice.html" class="dropdown__link">
                                     Notice
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="tender.html" class="dropdown__link">
                                     Tenders
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="form.html" class="dropdown__link">
                                     Form
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="rti.html" class="dropdown__link">
                                     RTI
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="media_gallery.html" class="dropdown__link">
                                     Media Gallery
                                 </a>
                             </li>
+
                         </ul>
                     </li>
 
@@ -386,7 +410,7 @@
             </div>
             <div class="nav__data">
                 <a href="#" class="nav__logo">
-                    <img src="./assets/img/cm-1.png" alt="">
+                    <img class="cm-img" src="./assets/img/cm-1.png" alt="">
                 </a>
 
             </div>
@@ -438,7 +462,7 @@
                                 </div>
                                 <div>
                                     <div>
-                                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2888.2321461533734!2d86.15748937385501!3d20.359077310445365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a197938b436ee9f%3A0xd1f0c1f36c952bf6!2sRaghunathpur%20Block%20Office!5e1!3m2!1sen!2sin!4v1729660327684!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d459056.5797593999!2d83.54656219482422!3d18.97261381587748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a3ce4465ff39493%3A0xf2a671dad42de628!2sRayagada%20Block%20Office!5e1!3m2!1sen!2sin!4v1747451319741!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                     </div>
                                 </div>
                             </section>
