--- a/index.html
+++ b/index.html
@@ -720,15 +720,15 @@
                         </div>
                         <marquee direction="up" class="scrill-notice">
                             <ul class="latest-news-ul">
-                                <li> EOI for Krushi Ratha programme in Kharif / Rabi 2024-25 under CDAO Jagatsinghpur
+                                <li> EOI for Krushi Ratha programme in Kharif / Rabi 2024-25 under CDAO Rayagada
                                     <img src="./assets/img/latest-news-blink-img.gif">
                                 </li>
-                                <li> Tender for hiring of vehicle for official use in Jagatsinghpur Municipality <img
+                                <li> Tender for hiring of vehicle for official use in Rayagada Municipality <img
                                         src="./assets/img/latest-news-blink-img.gif"> </li>
-                                <li> Tender for hiring of vehicle for official use of DLSA Jagatsinghpur <img
+                                <li> Tender for hiring of vehicle for official use of DLSA Rayagada <img
                                         src="./assets/img/latest-news-blink-img.gif">
                                 </li>
-                                <li> Tender for hiring of vehicle for official use of DLSA Jagatsinghpur <img
+                                <li> Tender for hiring of vehicle for official use of DLSA Rayagada <img
                                         src="./assets/img/latest-news-blink-img.gif">
                                 </li>
                                 <li> 31 mar 2022 Session 2019-20 <img src="./assets/img/latest-news-blink-img.gif"></li>
@@ -736,7 +736,7 @@
                                         src="./assets/img/latest-news-blink-img.gif"></li>
                                 <li> 16 feb 2022 list Part 02_16 feb 2022 <img
                                         src="./assets/img/latest-news-blink-img.gif"></li>
-                                <li> "Quotation for displaying of Advertisement within Jagatsinghpur Municipality Area"
+                                <li> "Quotation for displaying of Advertisement within Rayagada Municipality Area"
                                     <img src="./assets/img/latest-news-blink-img.gif">
                                 </li>
                             </ul>
@@ -751,16 +751,16 @@
                         </div>
                         <ul class="upcoming-event-list">
                             <li><span class="event-date">29 <br>
-                                    April</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur
+                                    April</span><span> Tender for hiring of vehicle for official use in Rayagada
                                     Municipality</span> </li>
                             <li><span class="event-date">30 <br>
-                                    April</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur
+                                    April</span><span> Tender for hiring of vehicle for official use in Rayagada
                                     Municipality</span> </li>
                             <li><span class="event-date">2 <br>
-                                    Mar</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur
+                                    Mar</span><span> Tender for hiring of vehicle for official use in Rayagada
                                     Municipality</span> </li>
                             <li><span class="event-date">5 <br>
-                                    Mar</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur
+                                    Mar</span><span> Tender for hiring of vehicle for official use in Rayagada
                                     Municipality</span> </li>
                         </ul>
                     </div>
