--- a/local-business-turmeric.html
+++ b/local-business-turmeric.html
@@ -447,23 +447,23 @@
                         <main>
                             <section class="main-sec">
                                 <div class="block-page-title-block">
-                                    <h1>Local Businesses : Moringa</h1><br>
+                                    <h1>Local Businesses : Turmeric</h1><br>
 
                                 </div>
                                 <div>
                                     <div>
                                         <div style="display: flex;">
-                                            <p>Odisha has recorded its first-ever international export of drumstick
-                                                (moringa) from the Rayagada district and pointed gourd (parwal) to
+                                            <p>Odisha has recorded its first-ever international export of Turmeric
+                                                (Turmeric) from the Rayagada district and pointed gourd (parwal) to
                                                 Dubai.
                                                 The consignment, totalling 910 kg, was shipped through Biju Patnaik
                                                 International Airport (BPIA), Bhubaneswar, reflecting Odisha’s expanding
                                                 footprint in global agri-markets.
                                                 <br><br>
-                                                Drumstick or Moringa, often referred to as a "superfood," is globally
+                                                Turmeric or Turmeric, often referred to as a "superfood," is globally
                                                 recognized for its exceptional nutritional value. It is rich in
                                                 vitamins,
-                                                minerals, and antioxidants. The moringa grown in Odisha is particularly
+                                                minerals, and antioxidants. The Turmeric grown in Odisha is particularly
                                                 prized for its high potency of bioactive compounds due to the region’s
                                                 unique agro-climatic conditions, which enhance its medicinal and
                                                 nutritional
@@ -484,9 +484,9 @@
                                                 Agricultural and Processed Food Products Export Development Authority
                                                 (APEDA) Sitakanta Mandal flagged off the consignment.
 
-                                                Drumstick, often referred to as a superfood, is globally recognised for
+                                                Turmeric, often referred to as a superfood, is globally recognised for
                                                 its exceptional nutritional value, being rich in vitamins, minerals and
-                                                antioxidants. “The drumstick grown in Odisha are known for its high
+                                                antioxidants. “The Turmeric grown in Odisha are known for its high
                                                 potency of bioactive compounds due to the region’s unique agro-climatic
                                                 conditions which enhance its medicinal and nutritional properties. This
                                                 quality makes it an ideal export commodity with significant demand in
@@ -520,7 +520,7 @@
                                             </p>
                                             <div class="product-img"
                                                 style="margin: 15px; height: 550px; border: 2px solid black; border-radius: 10px; box-shadow: 8px 8px 10px rgb(167, 183, 189);">
-                                                <img src="./assets/img/product-img-1.png" alt=""
+                                                <img src="./assets/img/product-img-2.png" alt=""
                                                     style="height: 100%; border-radius: 10px;">
                                             </div>
                                         </div>
@@ -539,10 +539,9 @@
                                             <tbody>
                                                 <tr>
                                                     <td>Swornajyoti Farmers Producer Company</td>
-                                                    <td>Drumstick, Moringa</td>
+                                                    <td>Turmeric</td>
                                                     <td>
-                                                        Drumstick or Moringa, often referred to as a "superfood," is
-                                                        globally recognized for its exceptional nutritional value
+                                                        Turmeric (Curcuma longa) is a perennial herbaceous plant belonging to the ginger family (Zingiberaceae), cultivated primarily for its rhizomes, which are used both as a spice and for medicinal purposes. 
                                                     </td>
                                                     <td>900 kg</td>
                                                     <td>
@@ -552,10 +551,9 @@
                                                 </tr>
                                                 <tr>
                                                     <td>Swornajyoti Farmers Producer Company</td>
-                                                    <td>Drumstick, Moringa</td>
+                                                    <td>Turmeric</td>
                                                     <td>
-                                                        Drumstick or Moringa, often referred to as a "superfood," is
-                                                        globally recognized for its exceptional nutritional value
+                                                        Turmeric (Curcuma longa) is a perennial herbaceous plant belonging to the ginger family (Zingiberaceae), cultivated primarily for its rhizomes, which are used both as a spice and for medicinal purposes. 
                                                     </td>
                                                     <td>900 kg</td>
                                                     <td>
@@ -565,10 +563,9 @@
                                                 </tr>
                                                 <tr>
                                                     <td>Swornajyoti Farmers Producer Company</td>
-                                                    <td>Drumstick, Moringa</td>
+                                                    <td>Turmeric</td>
                                                     <td>
-                                                        Drumstick or Moringa, often referred to as a "superfood," is
-                                                        globally recognized for its exceptional nutritional value
+                                                        Turmeric (Curcuma longa) is a perennial herbaceous plant belonging to the ginger family (Zingiberaceae), cultivated primarily for its rhizomes, which are used both as a spice and for medicinal purposes. 
                                                     </td>
                                                     <td>900 kg</td>
                                                     <td>
@@ -578,10 +575,9 @@
                                                 </tr>
                                                 <tr>
                                                     <td>Swornajyoti Farmers Producer Company</td>
-                                                    <td>Drumstick, Moringa</td>
+                                                    <td>Turmeric</td>
                                                     <td>
-                                                        Drumstick or Moringa, often referred to as a "superfood," is
-                                                        globally recognized for its exceptional nutritional value
+                                                        Turmeric (Curcuma longa) is a perennial herbaceous plant belonging to the ginger family (Zingiberaceae), cultivated primarily for its rhizomes, which are used both as a spice and for medicinal purposes. 
                                                     </td>
                                                     <td>900 kg</td>
                                                     <td>
@@ -591,10 +587,9 @@
                                                 </tr>
                                                 <tr>
                                                     <td>Swornajyoti Farmers Producer Company</td>
-                                                    <td>Drumstick, Moringa</td>
+                                                    <td>Turmeric</td>
                                                     <td>
-                                                        Drumstick or Moringa, often referred to as a "superfood," is
-                                                        globally recognized for its exceptional nutritional value
+                                                        Turmeric (Curcuma longa) is a perennial herbaceous plant belonging to the ginger family (Zingiberaceae), cultivated primarily for its rhizomes, which are used both as a spice and for medicinal purposes. 
                                                     </td>
                                                     <td>900 kg</td>
                                                     <td>
